--- a/style.css
+++ b/style.css
@@ -1,25 +1,41 @@
 html {
-    background: #1d1135;
-    font-size: 10px;
-    text-align: center;
-  }
+  background: #1d1135;
+  font-size: 10px;
+  text-align: center;
+}
   
-  body {
-    align-items: center;
-    display: flex;
-    flex: 1;
-    font-size: 2rem;
-    margin: 0;
-    min-height: 100vh;
+body {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  font-size: 2rem;
+  margin: 0;
+  min-height: 100vh;
+}
+
+.titleName {
+  color: white;
+}
+
+/*============================================================================================== 
+    STARS SECTION
+  ==============================================================================================
+*/
+
+  .stars {
+    background-color: white;
+    border-radius: 50% 50%;
+    height: 10px;
+    position: absolute;
+    transition: 500ms;
+    width: 10px;
   }
 
-  .titleName {
-      color: white;
-  }
 
-  .planetSelectionBox {
-      color: white;
-  }
+/*============================================================================================== 
+    CLOCK SECTION
+  ==============================================================================================
+*/
 
   .clock {
     background: #0c164f;
@@ -31,6 +47,10 @@ html {
     padding: 2rem;
     position: relative;
     width: 30rem;
+  }
+
+  .clock.transform {
+    transition: all 1s linear;
   }
   
   .outerClockFace {
@@ -106,16 +126,16 @@ html {
   }
   
   .clockHand {
-      background: #7649fe;
-      border-radius: 6px;
-      height: 6px;
-      position: absolute;
-      right: 50%;
-      top: 50%;
-      transform: rotate(90deg);
-      transform-origin: 100%;
-      transition: all 1s linear;
-      width: 50%;
+    background: #7649fe;
+    border-radius: 6px;
+    height: 6px;
+    position: absolute;
+    right: 50%;
+    top: 50%;
+    transform: rotate(90deg);
+    transform-origin: 100%;
+    transition: all 1s linear;
+    width: 50%;
   }
   
   .clockHand.hour-hand {
@@ -127,7 +147,7 @@ html {
   .clockHand.minute-hand {
     height: 6px;
     width: 45%;
-    z-index: 10;
+    z-index: 4;
   }
   
   .clockHand.second-hand {
